# controle-datas-ong

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  arquitetura_uml.md  check_db.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.bat  setup.sh  start_launcher.py
.github/: copilot-instructions.md  deploy.yml
.github/workflows/: ci-cd.yml
app/: __init__.py  config.py  forms.py  models.py  routes.py
app/static/css/: style.css
app/static/js/: central-ong.js  main.js
app/templates/: index.html
scripts/: cadastrar_categorias.py
tests/: conftest.py  test_dashboard_and_product_lifecycle.py
